--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,11 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-.image{
-    background-size: cover ;
-    background-attachment: fixed;
-    opacity: 0.9;
-    width: 100vw;
-    height: 100vh;
+.header{
+    display: flex;
+    justify-content: center;
+}
+.header__logo{
+    
+    width: 100px;
 }
