--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-*{
+/* *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -10,7 +10,7 @@ body{
     height: 100vh;
 }
 /* HEADER */
-.header{
+/* .header{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,8 +23,8 @@ body{
 }
 
 /* MAIN */
-.main{
-    display: flex;
+/* .main{ */
+    /* display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -48,7 +48,7 @@ body{
 }
 
 /* FOOTER */
-.footer{
+/* .footer{
     display: flex;
     margin: 5px;
-}
+} */ 
