--- a/css/style.css
+++ b/css/style.css
@@ -1,54 +1,272 @@
-/* *{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-body{
-    background: linear-gradient(180deg, #FFF 0%, #f7cc77 70%, #ffc042 100%);
-    background-repeat: no-repeat;
+
+body {
+
     height: 100vh;
-}
-/* HEADER */
-/* .header{
+    /* background-color: #ffce6b5c; */
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+
 
 }
-.header__logo{
-    margin-top: 10px;
-    width: 160px;
+
+/* HEADER */
+.header {
+
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding-top: 5px;
+    /* background-color: #ce6b5c; */
+    border-radius: 0px 0px 20px 20px;
+    box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.2);
+    height: 4rem;
 }
+
+/* .header__logo {
+    
+    margin-right: 10px;
+    width: 97px;
+} */
+
+
+.header__logo {
+    text-decoration: none;
+    font-size: 1.25rem;
+    padding: 10px;
+    color: #E85C0D;
+    font-weight: bold;
+}
+
+.header__menu {
+    display: none;
+}
+
+.header__select {
+    padding: 5px;
+    font-size: 1rem;
+    border-radius: 4px;
+    border: 2px solid #E85C0D;
+
+}
+
+.header__select:active {
+    border: 2px solid #881022;
+}
+
+.header__boton {
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid #E85C0D;
+    background-color: #881022;
+    color: white;
+}
+
+
 
 /* MAIN */
-/* .main{ */
-    /* display: flex;
+.main {
+    display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
+    flex: 1;
+
 
 }
-.main__titulo{
-    color: #821131;
-    text-align: center;
-    margin: 5px;
+
+.main__titulo--destacado {
+    color: #881022;
+    margin-right: 10px;
+
+}
+
+.main__background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-repeat: no-repeat;
+    z-index: -2;
+    min-height: 100vh;
+
+}
+
+.main__titulo {
+    color: #C7253E;
+    margin: 0.625rem;
     display: flex;
-    align-items: center;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 30px;
 
 }
 
-.tarjeta{
-    margin: 6px;
-    border: 1px solid black;
-    width: 50px;
+.tarjeta {
+    position: relative;
+    width: 100%;
+    margin: 12px;
+    /* border: 1px solid black; */
+    max-width: 100%;
+    height: 17.75rem;
+    border-radius: 10px;
+
+    transition: transform 0.3s ease;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.2);
+
+
+}
+
+.tarjeta:hover {
+    transform: scale(1.10);
+
+}
+
+.tarjeta__imagen {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    border-radius: 10px;
+    /* opacity: 0.7; */
+}
+
+.header_tarjeta {}
+
+.tarjeta__titulo {
+    text-align: center;
+    color: #FFF;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* width: 100%; */
+    text-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
+    margin-bottom: 0.5rem;
+}
+
+.tarjeta__fecha {
+    color: white;
+    text-align: center;
+    font-size: 0, 75rem;
+    position: absolute;
+    left: 50%;
+    top: 30%;
+    /* width: 100%; */
+    transform: translate(-50%, 40%);
+
+}
+
+.tarjeta__boton-accion {
+    display: flex;
+    justify-content: center;
+    padding: 10px 20px;
+    background-color: #C7253E;
+    color: white;
+    text-decoration: none;
+    border-radius: 10px;
+    width: 200px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+}
+
+.tarjeta__boton {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    left: 50%;
+    bottom: 5%;
+    width: 100%;
+    transform: translate(-50%, -50%);
+
 }
 
 /* FOOTER */
-/* .footer{
+.footer {
+
+    margin-top: auto;
+    border-top: 1px solid #E85C0D;
     display: flex;
-    margin: 5px;
-} */ 
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    border-radius: 8px;
+    background-color: rgba(0, 0, 0, 0.05);
+    box-shadow: 8px 6px 6px 7px rgba(0, 0, 0, 0.2);
+
+}
+
+.footer__enlace {
+    justify-content: space-evenly;
+    align-items: center;
+    display: flex;
+    text-decoration: none;
+    margin: 8px;
+    color: #881022;
+    font-size: 1.2rem;
+}
+
+/* .footer__enlace:visited {
+    color: black;
+
+} */
+
+.footer__enlace--rrss {
+    font-size: 1.7rem;
+    color: #881022;
+
+}
+
+.footer__enlaces {
+    padding: 2em;
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+.footer__autor {
+    color: #E85C0D;
+    opacity: 0.4;
+    margin: 0.7em;
+}
+
+@media (min-width: 768px) {
+    .main {
+        margin-top: 2em;
+        margin-bottom: 2em;
+    }
+
+    .main__titulo {
+        margin: 0.8em;
+    }
+
+    .header__select,
+    .header__boton {
+        display: none;
+    }
+
+    .header__menu {
+        display: flex;
+        gap: 2.5rem;
+        list-style: none;
+    }
+
+    .header__nav {
+        color: #881022;
+        text-decoration: none;
+        font-size: 1rem;
+        font-weight: 600;
+    }
+
+    .header__nav:hover {
+        color: #C7253E;
+    }
+}
