--- a/css/style.css
+++ b/css/style.css
@@ -287,6 +287,10 @@ body {
 
 .section{
     margin: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 @media (min-width: 768px) {
