--- a/css/style.css
+++ b/css/style.css
@@ -363,10 +363,10 @@ span {
 
 .section {
     margin: 1rem;
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
 }
 
 .section__links {
